# checkit

./: CMakeLists.txt  README.md  checkelf.cc  checkelf.h  checkpe.cc  main.cc
src/: checkelf.cc  checkpe.h
src/includes/: elf.hpp
src/includes/coff/: section_header.hpp
src/includes/nt/: image.hpp  nt_headers.hpp
src/includes/nt/directories/: dir_load_config.hpp
